# ticker

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
tests/: conftest.py
tests/e2e/: test_vendor_proxy.py
tests/integration/: test_repository.py  test_uow.py  test_views.py
tests/unit/: test_handlers.py
ticker/: bootstrap.py  config.py  views.py
ticker/adapters/: orm.py  repository.py  vendor_proxy.py
ticker/domain/: commands.py  events.py  model.py
ticker/entrypoints/: app_controller.py
ticker/service_layer/: handlers.py  messagebus.py  unit_of_work.py
