[tool.pylint.master]
output-format = "colorized"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "wrong-import-order",
    "logging-fstring-interpolation",
    "import-error",
    "unsupported-binary-operation",
]

[tool.poetry]
name = "ticker"
version = "0.0.1"
description = ""
authors = ["resoliwan <resoliwan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pylint = "^2.13.8"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.2.1"
debugpy = "^1.6.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
