[tool.pylint.master]
output-format = "colorized"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "wrong-import-order",
    "logging-fstring-interpolation",
    "import-error",
    "unsupported-binary-operation",
]

[tool.poetry]
name = "ticker"
version = "0.0.1"
description = ""
authors = ["resoliwan <resoliwan@gmail.com>"]

[tool.poetry.dependencies]
PyMySQL = "^1.0.2"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.36"
arrow = "^1.2.2"
fastapi = "^0.76.0"
mysql-connector = "^2.2.9"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.2"
pytest-icdiff = "^0.5"
python = "^3.10"
requests = "^2.27.1"
tenacity = "^8.0.1"
uvicorn = "^0.17.6"
py = "^1.11.0"
pandas = "^1.5.3"
yfinance = "^0.2.9"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pylint = "^2.13.8"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.2.1"
debugpy = "^1.6.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
